website/versioned_docs/version-12.0/about-the-consoles/fader-wings.md
---
id: fader-wings
title: Fader Wings
sidebar_label: Fader Wings
original_id: fader-wings
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

"Wings" are additional control surfaces which can be connected to the
console to provide more faders and buttons, and in some cases extra
touch screens.

## Tiger Touch Wing

The Tiger Touch wing provides 30 additional handles each with an
associated legend display. The handles can be used as playbacks or to
patch fixtures/dimmers. Each row of 15 faders has its own independent
paging control.

![Tiger Touch Wing](/docs/images/Tiger-Touch-Wing.png)

The Tiger Touch Wing connects by USB to the main console. It also needs
a mains power connection. The Wing has a built in USB hub to provide 2
further USB sockets for a keyboard etc.

The Tiger Touch Wing is designed to fit next to the Tiger Touch console
but can also be used with the Pearl Expert, the Arena and the Sapphire
Touch.

## Titan Mobile Wing

The Titan Mobile Wing adds 20 additional playback faders and 30
macro/executor buttons to the main console. It connects by a single USB
cable to the console or the PC running the Titan software.

It is designed to fit next to the Titan Mobile panel, but it can also be
used with the Tiger Touch, Quartz, Arena and Sapphire Touch consoles,
and the Titan Two dongle.

If you want to see the legends and function information for the wing
controls, you can open the Wing View workspace window on the main
console.

![Titan Mobile Wing](/docs/images/Titan-Mobile-Wing.png)
